# starbytes-project

./: .gitignore  .travis.yml  AGENTS.md  CMakeLists.txt  CMakeSettings.json  LICENSE  PROPOSED_FEATURES.MD  README.md  Run.bat  STARBYTES_ROADMAP.md  SpecializedPhase4.starbsymtb  StarBytesSyntax.txt  Starbytes.cmake  StarbytesAssemblyModuleSyntax.txt  Test.starbsymtb  appveyor.yml  build.py  config.bat  deps.py  init.py  module_test_output.stbxm  test.bat  test.stbxm  vc.bat
Starbytes/: CMakeLists.txt
Starbytes/include/AST/: AST.h
Starbytes/include/Base/: ADT.h  ANSIColors.h  Base.h
Starbytes/include/Module/: Module.h
Starbytes/include/Parser/: AST.h  Document.h  Lexer.h  Parser.h  Serialization.h  Token.h
Starbytes/include/Runtime/: RuntimeEngine.h  RuntimeLib.h
Starbytes/include/Semantics/: SemanticAnalyzer.h  SemanticsEngine.h
Starbytes/lib/: CMakeLists.txt
Starbytes/lib/AST/: AST.cpp  ASTDumper.cpp  CMakeLists.txt  Document.cpp
Starbytes/lib/Base/: ADT.cpp  CMakeLists.txt  Document.cpp
Starbytes/lib/Interpreter/: CMakeLists.txt  RuntimeEngine.cpp
Starbytes/lib/Module/: CMakeLists.txt  Module.cpp
Starbytes/lib/Parser/: AST.cpp  CMakeLists.txt  Document.cpp  Lexer.cpp  Parser.cpp
Starbytes/lib/Project/: CMakeLists.txt  Project.cpp
Starbytes/lib/Runtime/: CMakeLists.txt  RuntimeEngine.cpp  RuntimeLib.cpp
Starbytes/lib/Semantics/: CMakeLists.txt  SemanticAnalyzer.cpp  SemanticsEngine.cpp  SemanticsMain.cpp
Starbytes/starbytes/: CMakeLists.txt  Starbytes.cpp  Starbytes.h
Starbytes/starbytes-lib/: CMakeLists.txt
Starbytes/starbytes-lib/include/: AST.h  Lexer.h  Parser.h  Token.h
Starbytes/starbytes-lib/lib/: Document.cpp  Lexer.cpp  Lookup.cpp  Parser.cpp  Serialization.cpp
Starbytes/starbytes-lsp/: CMakeLists.txt  JSONOutput.cpp  JSONOutput.h  LSPProtocol.cpp  Starbytes-LSP.cpp  Starbytes-LSP.h
Starbytes/starbytes-lspserver/: CMakeLists.txt  JSONOutput.cpp  JSONOutput.h  LSPProtocol.cpp  LSPProtocol.h  Starbytes-LSP.cpp
Starbytes/tests/: CMakeLists.txt
Starbytes/tests/FileParse/: test.cpp
Starbytes/tests/PFParse/: test.cpp
Starbytes/tests/RuntimeTest/: CMakeLists.txt  Run.cpp
Starbytes/tests/SemanticsTest/: Test.cpp
Starbytes/tools/: CMakeLists.txt
Starbytes/tools/core/: CMakeLists.txt  Starbytes.cpp  Starbytes.h
Starbytes/tools/starbytes-lsp/: CMakeLists.txt  JSONOutput.cpp  JSONOutput.h  LSPProtocol.h  Starbytes-LSP.cpp  Starbytes-LSP.h
Starbytez/: AST.h  CMakeLists.txt  Lexer.cpp  Lookup.h  Parser.cpp  Parser.h  Starbytes.cpp  Token.cpp  Token.h
Starbytez/starbytes/: CMakeLists.txt  Starbytes.cpp  Starbytes.h
Starbytez/starbytes-lib/: CMakeLists.txt
Starbytez/starbytes-lib/include/: Parser.h
Starbytez/starbytes-lib/lib/: Parser.cpp
embed/: CMakeLists.txt  starbytes.cpp
embed/include/: starbytes.h
ide/: CMakeLists.txt  main.cpp
starbytes-lang/: CMakeLists.txt  Starbytes.cmake
starbytes-lang/baselib/: CMakeLists.txt
starbytes-lang/baselib/Source/: Regex.stb
starbytes-lang/cmake/modules/: AddClangCXXLib.cmake  CompileStarbytes.cmake  Starbytes.cmake
starbytes-lang/docs/: Syntax.md
starbytes-lang/driver/: main.cpp
starbytes-lang/embed/: CMakeLists.txt  starbytes.cpp
starbytes-lang/embed/include/: starbytes.h
starbytes-lang/extra/: disasm.cpp
starbytes-lang/lib/: CMakeLists.txt
starbytes-lang/lib/AST/: AST.cpp  ASTDecl.cpp  ASTDumper.cpp  ASTStmt.cpp  ASTTraveler.cpp  CMakeLists.txt  Type.cpp
starbytes-lang/lib/Base/: ADT.cpp  CMakeLists.txt  CmdLine.cpp  CodeView.cpp  Diagnostic.cpp  Document.cpp  FS.cpp  Logging.cpp  Module.cpp
starbytes-lang/lib/ByteCode/: BCDef.cpp  BCEncodeDecodeFactory.cpp  BCGenerator.cpp  BCLink.cpp  BCParser.cpp  BCSerializer.cpp  CMakeLists.txt
starbytes-lang/lib/Core/: CMakeLists.txt  Core.cpp
starbytes-lang/lib/Formatter/: CMakeLists.txt  WriteOut.cpp
starbytes-lang/lib/Interpreter/: BCReader.cpp  CMakeLists.txt  RTTypeCheck.cpp  RTTypeCheck.h  RuntimeEngine.cpp  RuntimeEngine.h  STDObjects.cpp  STDObjects.h
starbytes-lang/lib/LangDevKit/: CMakeLists.txt  DevKit.cpp  Suggestions.cpp  Suggestions.h
starbytes-lang/lib/Parser/: CMakeLists.txt  Lexer.cpp  Lookup.cpp  Parser.cpp  SemanticA.cpp  Token.cpp
starbytes-lang/lib/Project/: CMakeLists.txt  DependencyTree.cpp  DependencyTree.h  Project.cpp
starbytes-lang/lib/RT/: CMakeLists.txt  RTCode.cpp  RTEngine.cpp  RTStdlib.cpp  RTStdlib.h
starbytes-lang/lib/Semantics/: CMakeLists.txt  Scope.cpp  ScopeStoreIO.cpp  SemanticsMain.cpp  StarbytesDecl.cpp  StarbytesDecl.h  StarbytesExp.cpp  StarbytesExp.h  Symbols.cpp  TypeCheck.cpp  TypeCheck.h
starbytes-lang/lib/Syntax/: CMakeLists.txt  Lexer.cpp  SyntaxA.cpp
starbytes-lang/tests/: CMakeLists.txt  compileTest.cpp  lexTest.cpp  parseTest.cpp  runTest.cpp  test.stb
starbytes-lang/tests/BCTest/: CMakeLists.txt  main.cpp
starbytes-lang/tests/DataTest/: CMakeLists.txt  main.cpp
starbytes-lang/tests/FileOutTest/: CMakeLists.txt  Test.cpp
starbytes-lang/tests/FileParse/: CMakeLists.txt
starbytes-lang/tests/Files/: test.stb
starbytes-lang/tests/PFParse/: CMakeLists.txt  test.cpp
starbytes-lang/tests/RuntimeTest/: Run.cpp  (+1 more)
starbytes-lang/tools/: CMakeLists.txt
stdlib/: Builtins.md  CMakeLists.txt  builtins.starbint
stdlib/Archive/: Archive.cpp  Archive.starbint
stdlib/CmdLine/: CmdLine.cpp  CmdLine.starbint
stdlib/Compression/: Compression.cpp  Compression.starbint
stdlib/Config/: Config.cpp  Config.starbint
stdlib/Crypto/: Crypto.cpp  Crypto.starbint
stdlib/Env/: Env.cpp  Env.starbint
stdlib/FS/: FS.cpp  FS.starbint
stdlib/HTTP/: HTTP.cpp  HTTP.starbint
stdlib/IO/: IO.cpp  IO.starb  IO.starbint
stdlib/JSON/: JSON.cpp  JSON.starbint
stdlib/Log/: Log.cpp  Log.starbint
stdlib/Math/: Math.cpp  Math.starbint
stdlib/Net/: Net.cpp  Net.starbint
stdlib/Process/: Process.cpp  Process.starbint
stdlib/Random/: Random.cpp  Random.starbint
stdlib/Text/: Text.cpp  Text.starbint
stdlib/Threading/: Threading.cpp  Threading.starbint
stdlib/Time/: Time.cpp  Time.starbint
stdlib/Unicode/: Unicode.cpp  Unicode.starbint
(+712 files in other folders)
