set(TARGET_NAME "starbytes-${STARBYTES_PROJECT_VERSION}")
add_library(${TARGET_NAME} SHARED "starbytes.cpp" "include/starbytes.h")
set_target_properties(${TARGET_NAME} PROPERTIES PREFIX "")
target_include_directories(${TARGET_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/include")
# foreach(lib ${llvm_libs})
# 	set(OBJS "$<TARGET_OBJECTS:${lib}>")
# 	target_sources(${TARGET_NAME} PRIVATE ${OBJS})
# endforeach()
# foreach(lib ${STARBYTES_ALL_LIBS})
# 	set(OBJS "$<TARGET_OBJECTS:${lib}>")
# 	target_sources(${TARGET_NAME} PRIVATE ${OBJS})
# endforeach()
target_link_libraries(${TARGET_NAME} PRIVATE ${STARBYTES_ALL_LIBS})